fix(Section): Hide scrollbars rather than show them on hover

--- a/react/Section/Section.less
+++ b/react/Section/Section.less
@@ -4,7 +4,7 @@
 
 .root {
   overflow-x: hidden;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
+  -ms-overflow-style: none;
   padding: (@grid-row-height * 2) @grid-gutter-width;
   @media only screen and (min-width: (@grid-container-width + (@grid-gutter-width * 2))) {
     padding-left: (@grid-gutter-width * 1.5);
